--- a/.ci_support/linux_64_.yaml
+++ b/.ci_support/linux_64_.yaml
@@ -1,7 +1,7 @@
 cdt_name:
 - cos6
 channel_sources:
-- nsls2forge,defaults
+- nsls2forge,conda-forge,defaults
 channel_targets:
 - nsls2forge main
 docker_image:
