--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,10 +40,10 @@ test:
     - chxtools.bpm_stability
     - chxtools.chx_utilities
     - chxtools.chx_wrapper
-    # This import attempts to create a databroker instance with the 'chx'
+    # The imports below attempts to create a databroker instance with the 'chx'
     # catalog config, so excluding it from this simple test.
     # - chxtools.handlers
-    - chxtools.plot_sid
+    # - chxtools.plot_sid
     - chxtools.pv_explorer
     - chxtools.transfuncs
     - chxtools.xfuncs
